syntax = "proto3";

package invoice;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/tenling100/shiharaikun/api";

// Invoice service definitions
service InvoiceService {
  rpc CreateInvoice(InvoiceRequest) returns (InvoiceResponse) {
    option (google.api.http) = {
      post: "/api/invoice"
      body: "*"
    };
  }
  rpc GetInvoicesByDateRange(DateRangeRequest) returns (InvoicesResponse) {
    option (google.api.http) = {
      get: "/api/invoices"
    };
  }
  rpc CreateCompany(company) returns (company) {
    option (google.api.http) = {
      post: "/api/company"
      body: "*"
    };
  }
  rpc CreateUser(user) returns (user) {
    option (google.api.http) = {
      post: "/api/user"
      body: "*"
    };
  }
}

// invoice status enum
enum InvoiceStatus {
  UNSPECIFIED = 0;
  UNPAID = 1;
  PAID = 2;
  REJECTED = 3;
  PENDING = 4;
  CANCELLED = 5;
  DELETED = 6;
}

message InvoiceRequest {
  string id = 1;
  uint64 company_id = 2;
  uint64 creator_id = 3;
  uint64 client_id = 4;
  google.protobuf.Timestamp issue_date = 5;
  float invoice_amount = 6;
  google.protobuf.Timestamp payment_due_date = 7;
  InvoiceStatus status = 8;
}

message InvoiceResponse {
  Invoice invoice = 1;
}

message DateRangeRequest {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
}

message InvoicesResponse {
  repeated Invoice invoices = 1;
}

message company {
  google.protobuf.UInt64Value id = 1;
  string name = 2;
  string representative = 3;
  string phone = 4;
  string postal_code = 5;
  string address = 6;
}

message user {
  google.protobuf.UInt64Value id = 1;
  string name = 2;
  string email = 3;
  uint64 company_id = 4;
}

message Invoice {
  google.protobuf.UInt64Value id = 1;
  company company = 2;
  company client = 3;
  google.protobuf.Timestamp issue_date = 4;
  float payment_amount = 5;
  float fee = 6;
  float fee_rate = 7;
  float tax = 8;
  float tax_rate = 9;
  float invoice_amount = 10;
  google.protobuf.Timestamp payment_due_date = 11;
  InvoiceStatus status = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}
